--- a/content/graphqlintro/3.md
+++ b/content/graphqlintro/3.md
@@ -2,27 +2,19 @@
 date = "2017-04-26T22:28:55+10:00"
 next = "/graphqlintro/4"
 prev = "/graphqlintro/2"
-title = "Load Schema"
+title = "Load Data"
 weight = 3
 course = 1
 courseName = "Introduction"
-type = "graphql/schema"
+type = "graphql"
 +++
 
-Dgraph generates a GraphQL API endpoint complete with CRUD operations after
-ingesting a GraphQL schema comprised of types. So, when you upload your schema,
-you already get the ability to perform CRUD operations on instances of each type
-in your schema, without further coding.
+You can load data into a Dgraph database with GraphQL mutations.
 
-You can copy the schema provided in the editable code block provided here, and
-then paste it into the **Schema** input on your Dgraph Cloud instance.
+To load the small dataset that we have provided for your use in the upcoming
+lessons, run the mutations that we have provided by clicking **Run**.
 
-To make this easier for you, we have created this editable code block that can
-push a Schema to your Dgraph Cloud instance if authorized with an Admin API Key.
-For instructions on deploying Dgraph on Dgraph Cloud and generating an Admin API
-Key, go back to [Run Dgraph]({{< relref "graphqlintro/2" >}}).
-
-If you already have set your Dgraph Cloud GraphQL Endpoint and the Admin API
-Key, then click **Apply Schema** to push this schema to your endpoint.
-
-To continue this tour, this step is required.
+For the consistency of mutations and queries in this tutorial we use an `xid`
+field to identify nodes. We could have not used the `xid` field and relied
+solely upon the `id` field with the scalar type `ID`, but assigned `ids` will
+vary across instances.
