--- a/content/graphqlintro/8.md
+++ b/content/graphqlintro/8.md
@@ -1,30 +1,15 @@
 +++
 date = "2017-04-26T22:29:00+10:00"
 prev = "/graphqlintro/7"
-next = "/graphqlintro/9"
-title = "GraphQL API"
+next = "/?graphql"
+title = "Congratulations"
 weight = 8
 course = 1
 courseName = "Introduction"
+completed = 1
 +++
 
-Dgraph at its core is a loosely-typed database, and can be used in a NoSQL-like
-schema-less fashion. GraphQL provides a strongly typed API that is served from
-the core of a Dgraph database instance.
+Congratulations, you've finished the first module of the tutorial! By now, you
+should have seen an example mutation and query, and know a little about graphs.
 
-All other GraphQL databases apply GraphQL as a layer served above the database,
-but starting with Dgraph 20.03, Dgraph brings GraphQL into the core of the
-database itself. Dgraph was developed around DQL's GraphQL-like syntax, so
-integrating native GraphQL was a natural fit.
-
-GraphQL provides an API that is:
-
-- Strongly typed
-- Simple to query
-- Easy to traverse
-- Flexible to iterate upon
-- Proficient with business logic
-- Capable of 3rd-party data integration
-
-The GraphQL API provides an endpoint to ask for exactly what you want and
-provides results that match the shape of your request.
+Let's investigate some graphs and start writing more queries!
