fix: correct prev/next navigation links in intro tutorials
- graphqlintro/4.md: fix prev pointing to self, next skipping page 5
- intro/2-7.md: fix all prev links pointing to self
- intro/2-6.md: fix next links skipping pages
- intro/6.md: fix next pointing to non-existent /intro/8

--- a/content/graphqlintro/4.md
+++ b/content/graphqlintro/4.md
@@ -1,7 +1,7 @@
 +++
 date = "2018-11-04T22:28:55+10:00"
-next = "graphqlintro/6"
-prev = "graphqlintro/4"
+next = "/graphqlintro/5"
+prev = "/graphqlintro/3"
 title = "Mutation Introduction"
 weight = 4
 course = 1
