refactor: remove Dgraph Cloud references and update for local dev
- Remove dgraphCloud, dgraphCloudPricing, and dgraphPricing URLs from config
- Update dgraphDocs to docs.dgraph.io and dgraphTour to local root
- Remove Pricing link from navigation
- Remove Sign In/Contact Us buttons from nav (desktop and tablet)
- Remove Start Free Trial and See Pricing Plans buttons from footer
- Remove Pricing link from footer links
- Update graphqlintro menu description to remove Cloud reference
- Update content files to reference local Dgraph instance instead of Cloud
- Remove API Key input field from runnable settings modal

--- a/content/graphqlintro/1.md
+++ b/content/graphqlintro/1.md
@@ -11,13 +11,12 @@ courseName = "Introduction"
 Welcome to GraphQL powered by [Dgraph](https://dgraph.io) database.
 
 This interactive tutorial will get you up and running writing queries in GraphQL
-using Dgraph Cloud, a Dgraph database backend that we offer as a managed
-service.
+using Dgraph, a high-performance graph database.
 
 {{% notice "note" %}} To take a tour of Dgraph using Dgraph Query Language (DQL,
 formerly known as GraphQL+-), please see the [DQL-focused portion of this
 tour]({{< relref "intro/1" >}}). The first five sections of this tour focus
-exclusively on using Dgraph Cloud with GraphQL. {{% /notice %}}
+on using Dgraph with GraphQL. {{% /notice %}}
 
 In this tutorial, you can run queries and mutations. The tutorial will guide you
 from your first graph query to creating more advanced queries.
