--- a/content/graphqlintro/5.md
+++ b/content/graphqlintro/5.md
@@ -9,7 +9,7 @@ course = 1
 courseName = "Introduction"
 +++
 
-So far in this tour, you have deployed a Dgraph Cloud backend and run a few
+So far in this tour, you have set up a Dgraph instance and run a few
 mutations to edit data. But before proceeding further, you'd probably like to
 understand some basics, like: What is a graph, and what does it have to do with
 databases?
