--- a/content/graphqlmoredata/1.md
+++ b/content/graphqlmoredata/1.md
@@ -18,8 +18,8 @@ that we started with and try out something bigger; much bigger.
 In the Dgraph GitHub repository, you'll find a
 [dataset about movies, directors and actors](https://github.com/dgraph-io/tutorial/tree/master/resources/1million.rdf.gz). There's around one million triples in the dataset.
 
-You could load this dataset into your Dgraph Cloud backend, but that would eat up
-resources and exceed data transfer limits on the Free tier.
+You could load this dataset into your Dgraph instance, but we've already done
+that for you as part of the tutorial setup.
 
 It's a big database of movies, but it won't trouble Dgraph. It is, however, big
 enough to provide some complex query results.
@@ -28,8 +28,7 @@ This dataset is a one-million-triple subset of a
 [larger dataset of movies](https://github.com/dgraph-io/benchmarks/blob/master/data/21million.rdf.gz)
 that contains around 230,000 actors and around 86,000 movies.
 
-To work with a bigger dataset without data transfer limitations, we have
-loaded a movie dataset into a read-only "playground" and applied the schema
+The movie dataset has been loaded into your local Dgraph instance with the schema
 displayed here to generate the GraphQL API. In this dataset, we have 275,195
 movies and 63,450 actors. This is not meant to be a complete movie dataset, so
 you might find that your favorite movies or actors are missing.
