fix: update Type System link to new docs URL
- Change link text to "Schema and Type System here"
- Update URL to https://docs.dgraph.io/dql/dql-schema

--- a/content/basic/3.md
+++ b/content/basic/3.md
@@ -18,7 +18,7 @@ them based on their type. The type system is also used during expand queries.
 
 So in order to expand or delete nodes, you need to define your types correctly.
 You can see more about the
-[Type System here](https://dgraph.io/docs/query-language/type-system/).
+[Schema and Type System here](https://docs.dgraph.io/dql/dql-schema).
 
 # Data types and Schema
 
