fix: correct allofterms/anyofterms function names to lowercase
DQL functions are lowercase, not camelCase.

--- a/content/basic/6.md
+++ b/content/basic/6.md
@@ -18,10 +18,10 @@ filtering on internal blocks.
 
 There are many functions for filtering, some of them are
 
-- `allOfTerms(edge_name, "term1 ... termN")`: matches nodes with an outgoing
+- `allofterms(edge_name, "term1 ... termN")`: matches nodes with an outgoing
   `string` edge `edge_name` where the string contains all listed terms.
 
-- `anyOfTerms(edge_name, "term1 ... termN")`: As with `allOfTerms`, but matches
+- `anyofterms(edge_name, "term1 ... termN")`: As with `allofterms`, but matches
   at least one term.
 
 - The equalities and inequalities can be applied to edges of types: `int`,
