docs: clarify normalize output example

--- a/content/basic/15.md
+++ b/content/basic/15.md
@@ -14,5 +14,27 @@ The `@normalize` directive
 
 - flattens the result to remove nesting
 
+By adding the `@normalize` directive to the query, the results remove the nested `owns_pet` block and drop `age`, returning only the aliased fields:
+```
+"michael_and_pet_name": [
+  {
+    "name": "Michael",
+    "pet": "Rammy the sheep"
+  }
+]
+```
+Without it, the query would return:
+```
+"michael_and_pet_name": [
+  {
+    "name": "Michael",
+    "age": 39,
+    "owns_pet": [
+      { "pet": "Rammy the sheep" }
+    ]
+  }
+]
+```
+
 {{% notice tip %}} Aliased names can be the same as the original edge.
 {{% /notice %}}
