docs: clarify normalize text

--- a/content/basic/15.md
+++ b/content/basic/15.md
@@ -14,7 +14,7 @@ The `@normalize` directive
 
 - flattens the result to remove nesting
 
-By adding the `@normalize` directive to the query, the results remove the nested `owns_pet` block and drop `age`, returning only the aliased fields:
+By adding the `@normalize` directive to the query, the results return only the aliased fields:
 ```
 "michael_and_pet_name": [
   {
@@ -23,7 +23,7 @@ By adding the `@normalize` directive to the query, the results remove the nested
   }
 ]
 ```
-Without it, the query would return:
+Without it, the query would return nested results and keep unaliased fields like `age`:
 ```
 "michael_and_pet_name": [
   {
