--- a/content/basic/15.md
+++ b/content/basic/15.md
@@ -23,7 +23,7 @@ By adding the `@normalize` directive to the query, the results return only the a
   }
 ]
 ```
-Without the `@normalize` directive, the query would return `pet` nested inside `owns_pet` and include unaliased fields like `age`:
+Without the `@normalize` directive, the query response would have `pet` nested under `owns_pet` and include unaliased fields like `age`:
 ```
 "michael_and_pet_name": [
   {
