docs: refine normalize intro

--- a/content/basic/15.md
+++ b/content/basic/15.md
@@ -14,7 +14,7 @@ The `@normalize` directive
 
 - flattens the result to remove nesting
 
-By adding the `@normalize` directive to the query, the results return only the aliased fields:
+With the `@normalize` directive, the example query returns only the aliased fields:
 ```
 "michael_and_pet_name": [
   {
