docs: expand normalize lesson

--- a/content/basic/15.md
+++ b/content/basic/15.md
@@ -14,7 +14,8 @@ The `@normalize` directive
 
 - flattens the result to remove nesting
 
-With the `@normalize` directive, the example query returns only the aliased fields:
+
+By adding the directive the example query returns only the aliased fields:
 ```
 "michael_and_pet_name": [
   {
@@ -23,7 +24,7 @@ With the `@normalize` directive, the example query returns only the aliased fiel
   }
 ]
 ```
-Without the `@normalize` directive, the query response would have `pet` nested under `owns_pet` and include unaliased fields like `age`:
+Without it, the result would include unaliased fields like `age`, and has `pet` nested under `owns_pet`:
 ```
 "michael_and_pet_name": [
   {
@@ -36,5 +37,27 @@ Without the `@normalize` directive, the query response would have `pet` nested u
 ]
 ```
 
+Challenge: Modify the normalized query to include `age` in the result. 
+
+
 {{% notice tip %}} Aliased names can be the same as the original edge.
 {{% /notice %}}
+
+{{% expandable %}}
+```
+{
+  michael_and_pet_name(func: allofterms(name@., "Michael")) @normalize {
+    name : name
+    age: age
+    owns_pet {
+      pet: name
+    }
+  }
+}
+```
+{{% /expandable %}}
+
+
+
+
+
