docs: reorganize facets lesson

--- a/content/basic/17.md
+++ b/content/basic/17.md
@@ -13,23 +13,17 @@ triples. That is, facets add properties to edges, rather than to nodes. For
 example, a friend edge between two nodes may have a boolean property of close
 friendship. Facets can also be used as weights for edges.
 
-More details about Facets you can find in our Docs:
-https://docs.dgraph.io/dql/query/facets
+More details about facets are in the docs: https://docs.dgraph.io/dql/query/facets
 
-Reading all the documentation about Facets you will have examples of:
+In this lesson you will:
 
-- Facets on scalar predicates
-- Alias with facets
-- Facets on UID predicates
-- Filtering on facets
-- Sorting using facets
-- Assigning Facet values to a variable
-- Facets and Variable Propagation
-- Facets and Aggregation
+- Seed some facet data
+- Query facets on scalar predicates (see `basic/17.txt`)
+- Experiment with edges that carry multiple attributes
 
-For JSON mutation with Facets see: https://dgraph.io/docs/mutations/#facets
+### Seed the sample facet data
 
-Run this mutation on you terminal, before running the query: {{% expandable %}}
+Run this mutation in your terminal before executing the query examples: {{% expandable %}}
 
 ```
 curl -sH "Content-Type: application/rdf" "localhost:8080/mutate?commitNow=true" -XPOST -d $'
@@ -76,13 +70,16 @@ curl -sH "Content-Type: application/rdf" "localhost:8080/mutate?commitNow=true" 
 
 {{% /expandable %}}
 
-### Add multiple attributes to a third single node
+Then run the query in `basic/17.txt` to see facet values returned.
 
-Sometimes you need two Edges with distinct predicates pointing to the same node.
-This feature can be used to "explain the relationship" of nodes.
+For JSON mutation with facets see: https://dgraph.io/docs/mutations/#facets
 
-Let's say you have a existing Node that's your target his UID is "0x0f43". So
-you need to setup your RDF like this.
+### Add multiple attributes to a single node
+
+Sometimes you need two edges with distinct predicates pointing to the same node.
+This pattern can be used to "explain the relationship" of nodes.
+
+For a target node with UID `0x0f43`, set up the RDF like this:
 
 ```
 _:MyNode <predicate1> <0x0f43> ( foo=bar, and=1 ) .
@@ -90,7 +87,7 @@ _:MyNode <predicate2> <0x0f43> ( bar=bar, and=2 ) .
 _:MyNode <predicate3> <0x0f43> ( bar=bar, and=3 ) .
 ```
 
-more examples: {{% expandable %}}
+More examples: {{% expandable %}}
 
 ```
 _:MyNode <Morning> <0x0f43> ( foo=true, and=1 , since=2006-02-02T13:01:09 ) .
@@ -100,6 +97,6 @@ _:MyNode <Night>   <0x22>   ( bar=true, and=3,  since=2006-02-02T13:01:09 ) .
 
 {{% /expandable %}}
 
-If you do the same mutation above but using the same predicates instead of
-unique one. You will override the Edge attribute. Line by line. So you must to
-use distinct predicates.
+If you repeat the same predicate instead of distinct ones, each new line
+overwrites the previous edge attribute. Use distinct predicates to preserve
+each set of facet values.
