--- a/content/graphqlbasic/11.md
+++ b/content/graphqlbasic/11.md
@@ -22,7 +22,7 @@ and then returns a count of how many friends they have.
 **Something to try**: Query people that have friends and an age, and then count
 their friends that have a set age.
 
-{{% expandable %}}
+{{% answer-expandable %}}
 
 ```
 {
@@ -37,4 +37,4 @@ their friends that have a set age.
 }
 ```
 
-{{% /expandable %}}
+{{% /answer-expandable %}}
