--- a/content/graphqlbasic/5.md
+++ b/content/graphqlbasic/5.md
@@ -42,7 +42,7 @@ directive applied for indexing.
 the name of their pets. (**Hint**: use a filter argument with the `queryPerson` root
 function.)
 
-{{% expandable %}}
+{{% answer-expandable %}}
 
 ```
 {
@@ -57,4 +57,4 @@ function.)
 }
 ```
 
-{{% /expandable %}}
+{{% /answer-expandable %}}
