--- a/content/graphqlbasic/7.md
+++ b/content/graphqlbasic/7.md
@@ -27,7 +27,7 @@ the type `Person` and sort those nodes by the `name` field in ascending order.
 **Something to try**: Sort Alice's friends by their age, in descending order;
 and then by their name, in ascending order.
 
-{{% expandable %}}
+{{% answer-expandable %}}
 
 ```
 {
@@ -44,7 +44,7 @@ and then by their name, in ascending order.
 ```
 
 _FYI, This query will fail on Dgraph versions prior to 21.03_
-{{% /expandable %}}
+{{% /answer-expandable %}}
 
 For every type, Dgraph will generate a list of fields that are orderable. Edges
 to other nodes are not orderable fields within a type.
