--- a/content/graphqlschema/3.md
+++ b/content/graphqlschema/3.md
@@ -30,7 +30,7 @@ node UID.
 lesson using the **Back** button to find a query runner, and then try to query
 the `Company` type to see ids.
 
-{{% expandable %}}
+{{% answer-expandable %}}
 
 ```
 {
@@ -50,13 +50,13 @@ the `Company` type to see ids.
 }
 ```
 
-{{% /expandable %}}
+{{% /answer-expandable %}}
 
 **For a bigger challenge**: Go back to the previous lesson for a query runner,
 and then try to mutate Alice (`xid`: "alice") and update the `Person` to link to an
 existing `Company` as her employer.
 
-{{% expandable %}}
+{{% answer-expandable %}}
 
 ```
 mutation {
@@ -81,4 +81,4 @@ mutation {
 
 You might be interested to note that if you use the id of a `Company` with existing
 employees, the response to the above mutation will return all of the employees
-and not just Alice. {{% /expandable %}}
+and not just Alice. {{% /answer-expandable %}}
