--- a/content/graphqlschema/4.md
+++ b/content/graphqlschema/4.md
@@ -118,7 +118,7 @@ your schema or bypass the GraphQL API to access other Dgraph endpoints. A commun
 add the inverse relationship from the `Animal` to the companies that it
 represents.
 
-{{% expandable %}}
+{{% answer-expandable %}}
 
 ```
 type Company {
@@ -131,4 +131,4 @@ type Animal {
 }
 ```
 
-{{% /expandable %}}
+{{% /answer-expandable %}}
