--- a/content/basic/1.md
+++ b/content/basic/1.md
@@ -26,7 +26,7 @@ UID, it can be retrieved with `func: uid(<uid-number>)`.
 Something to try : Change the query to select someone else. You can check the
 [sample data](../../intro/4) again.
 
-{{% expandable %}} Find a name in the data and try
+{{% answer-expandable %}} Find a name in the data and try
 
 ```
 {
@@ -50,7 +50,7 @@ Or look at the `UID`s in the data and try
 
 You can edit the queries and try whatever you like. When there are answers like
 this, cut and paste them into the query panel, then edit and run them.
-{{% /expandable %}}
+{{% /answer-expandable %}}
 
 The tutorial will handle the running of the query for you, so just focus on the
 query text. You can also learn about
