--- a/content/blocksvars/8.md
+++ b/content/blocksvars/8.md
@@ -18,7 +18,7 @@ This query can be done in a single block, but you'll see here how values are
 available in other blocks if the corresponding UID's are available for the value
 map.
 
-Spoiler alert: {{% expandable %}}
+Spoiler alert: {{% answer-expandable %}}
 
 ```
 {
@@ -37,7 +37,7 @@ Spoiler alert: {{% expandable %}}
 }
 ```
 
-{{% /expandable %}}
+{{% /answer-expandable %}}
 
 After you have the query working, try changing the second block to use the wrong
 UID's and see what happens. For example, change `avs` to query for a different
