--- a/content/graphqlbasic/13.md
+++ b/content/graphqlbasic/13.md
@@ -56,7 +56,7 @@ desired results in queries that filter on an edge, or with deeper queries.
 **Something to try**: Return Alice's friends that own the animal with an `xid` equal
 to "goldie".
 
-{{% expandable %}}
+{{% answer-expandable %}}
 
 ```
 {
@@ -73,7 +73,7 @@ to "goldie".
 }
 ```
 
-{{% /expandable %}}
+{{% /answer-expandable %}}
 
 Putting the cascade directive at different levels in the subgraph applies the
 cascade effect from that level down.
