--- a/content/graphqlbasic/2.md
+++ b/content/graphqlbasic/2.md
@@ -27,7 +27,7 @@ requested this field for Alice and not on the nodes found on the friends edge.
 **Something to try**: Alice also owns a pet, find it and its `name`. The
 `ownsPets` edge can help you here.
 
-{{% expandable %}}
+{{% answer-expandable %}}
 
 ```
 {
@@ -44,4 +44,4 @@ requested this field for Alice and not on the nodes found on the friends edge.
 }
 ```
 
-{{% /expandable %}}
+{{% /answer-expandable %}}
