docs: clarify facets lesson

--- a/content/basic/17.md
+++ b/content/basic/17.md
@@ -9,17 +9,21 @@ courseName = "Basic"
 +++
 
 Dgraph supports facets — key value pairs on edges — as an extension to RDF
-triples. That is, facets add properties to edges, rather than to nodes. For
-example, a friend edge between two nodes may have a boolean property of close
-friendship. Facets can also be used as weights for edges.
-
-More details about facets are in the docs: https://docs.dgraph.io/dql/query/facets
+triples. Facets describe *aspects* of a relationship by adding properties to
+*edges*, instead of *nodes*. For example, a `friend` edge can carry a boolean
+`close` facet to mark close friendships.
 
 In this lesson you will:
 
 - Seed some facet data
-- Query facets on scalar predicates (see `basic/17.txt`)
+- Query facets on scalar predicates
 - Experiment with edges that carry multiple attributes
+
+More details about facets are in the docs: https://docs.dgraph.io/dql/query/facets
+
+If you run the query in `basic/17.txt` against the base tour dataset, it returns
+no data because the sample dataset does not include facet values yet. Seed the
+facet data first, then rerun the query.
 
 ### Seed the sample facet data
 
