docs: remove references to 17.txt in 17.md

--- a/content/basic/17.md
+++ b/content/basic/17.md
@@ -10,25 +10,19 @@ courseName = "Basic"
 
 Dgraph supports facets — key value pairs on edges — as an extension to RDF
 triples. Facets describe *aspects* of a relationship by adding properties to
-*edges*, instead of *nodes*. For example, a `friend` edge can carry a boolean
-`close` facet to mark close friendships.
+*edges*, instead of *nodes*. They can also be used as weights for edges.
 
-In this lesson you will:
-
-- Seed some facet data
-- Query facets on scalar predicates
-- Experiment with edges that carry multiple attributes
+For example, a `friend` edge can carry a boolean `close` facet to mark close
+friendships.
 
 More details about facets are in the docs: https://docs.dgraph.io/dql/query/facets
 
-If you run the query in `basic/17.txt` against the base tour dataset, it returns
-no data because the sample dataset does not include facet values yet. Seed the
-facet data first, then rerun the query.
+We first need to seed our dataset with facet information so the example query returns data.
+Copy and paste the command below into a terminal to run the mutation:
 
 ### Seed the sample facet data
 
-Run this mutation in your terminal before executing the query examples: {{% expandable %}}
-
+{{% expandable %}}
 ```
 curl -sH "Content-Type: application/rdf" "localhost:8080/mutate?commitNow=true" -XPOST -d $'
 {
@@ -74,11 +68,10 @@ curl -sH "Content-Type: application/rdf" "localhost:8080/mutate?commitNow=true" 
 
 {{% /expandable %}}
 
-Then run the query in `basic/17.txt` to see facet values returned.
+After loading the data to see the facets on on scalar predicates in the response.
 
-For JSON mutation with facets see: https://dgraph.io/docs/mutations/#facets
 
-### Add multiple attributes to a single node
+### Adding multiple attributes to a single node
 
 Sometimes you need two edges with distinct predicates pointing to the same node.
 This pattern can be used to "explain the relationship" of nodes.
