Revert "feat: add expandable shortcodes"
This reverts commit a29287bb77c523290cd686ff6a19afcd0c502468.

--- a/content/basic/11.md
+++ b/content/basic/11.md
@@ -34,7 +34,7 @@ and `NOT` connectives as in filters. So the syntax
 filtering on the elements returned by the root function is required.
 
 Something to try: Find all people who are in their 20s, and have at least 2
-friends. {{% answer-expandable %}}
+friends. {{% expandable %}}
 
 ```
 {
@@ -48,4 +48,4 @@ friends. {{% answer-expandable %}}
 }
 ```
 
-{{% /answer-expandable %}}
+{{% /expandable %}}
