--- a/content/basic/15.md
+++ b/content/basic/15.md
@@ -43,7 +43,7 @@ Challenge: Modify the normalized query to include `age` in the result.
 {{% notice tip %}} Aliased names can be the same as the original edge.
 {{% /notice %}}
 
-{{% answer-expandable %}}
+{{% expandable %}}
 ```
 {
   michael_and_pet_name(func: allofterms(name@., "Michael")) @normalize {
@@ -55,7 +55,7 @@ Challenge: Modify the normalized query to include `age` in the result.
   }
 }
 ```
-{{% /answer-expandable %}}
+{{% /expandable %}}
 
 
 
