--- a/content/basic/2.md
+++ b/content/basic/2.md
@@ -21,7 +21,7 @@ Let’s improve the query to get Michael and his network of friends.
 Something to try : Michael also owns a pet, find it and its `name`. The
 `owns_pet` edge will help here.
 
-{{% answer-expandable %}}
+{{% expandable %}}
 
 ```
 {
@@ -38,4 +38,4 @@ Something to try : Michael also owns a pet, find it and its `name`. The
 }
 ```
 
-{{% /answer-expandable %}}
+{{% /expandable %}}
