--- a/content/basic/5.md
+++ b/content/basic/5.md
@@ -26,7 +26,7 @@ JSON.
 Something to try: How about Michael’s friends' pets, or Michael's friends'
 friends.
 
-{{% answer-expandable %}} Query Michael's friends' pets:
+{{% expandable %}} Query Michael's friends' pets:
 
 ```
 {
@@ -60,7 +60,7 @@ Query Michael's friends' friends:
 }
 ```
 
-{{% /answer-expandable %}}
+{{% /expandable %}}
 
 The idea is to formulate the query as a traversal through the graph, following
 edges to the desired data. The `uid`'s in the JSON output allow interpretation
