--- a/content/graphqlbasic/1.md
+++ b/content/graphqlbasic/1.md
@@ -67,7 +67,7 @@ shape as the query itself.
 Something to try: Change the query to select someone else. You can check the
 [sample data](../../graphqlintro/4) again.
 
-{{% answer-expandable %}} Find an `xid` in the data, and then try the following:
+{{% expandable %}} Find an `xid` in the data, and then try the following:
 
 ```
 {
@@ -104,7 +104,7 @@ Or, try to get an animal instead with the following:
 
 You can edit these queries and try whatever you like. When there are answers
 like this, you can copy and paste them into the query panel, and then edit and
-run them. {{% /answer-expandable %}}
+run them. {{% /expandable %}}
 
 The tutorial covers connecting the client to the GraphQL API, so just focus on
 the query syntax for now.
