--- a/content/graphqlbasic/12.md
+++ b/content/graphqlbasic/12.md
@@ -22,7 +22,7 @@ in each case.
 for just those with pets, and alias this query as `peopleWithPets`. See if you
 can combine these queries into a single operation.
 
-{{% answer-expandable %}}
+{{% expandable %}}
 
 ```
 {
@@ -38,4 +38,4 @@ can combine these queries into a single operation.
 }
 ```
 
-{{% /answer-expandable %}}
+{{% /expandable %}}
