--- a/content/graphqlbasic/4.md
+++ b/content/graphqlbasic/4.md
@@ -27,7 +27,7 @@ JSON shown below.
 **Something to try**: Query to get a list of Alice’s friends' pets, or Alice's friends'
 friends.
 
-{{% answer-expandable %}} Query Alice's friends' pets:
+{{% expandable %}} Query Alice's friends' pets:
 
 ```
 {
@@ -65,7 +65,7 @@ Query Alice's friends' friends:
 }
 ```
 
-{{% /answer-expandable %}}
+{{% /expandable %}}
 
 In these examples, you'll see that you formulate a query as a traversal through
 a graph, following edges to the desired data. The `id`'s in the JSON output
