--- a/content/schema/7.md
+++ b/content/schema/7.md
@@ -35,7 +35,7 @@ the data to get the `uid`'s, formulate the mutations, then batch the updates.
 
 Don't worry if you can't find the `uid`s, you can always search by name:
 
-{{% answer-expandable %}}
+{{% expandable %}}
 
 ```
 {
@@ -54,4 +54,4 @@ Don't worry if you can't find the `uid`s, you can always search by name:
 ```
 
 The current editor is using the `/MUTATE` endpoint, so you may want to go back a
-few steps and run this on the `/QUERY` endpoint. {{% /answer-expandable %}}
+few steps and run this on the `/QUERY` endpoint. {{% /expandable %}}
