--- a/content/blocksvars/11.md
+++ b/content/blocksvars/11.md
@@ -11,7 +11,7 @@ courseName = "Var Blocks"
 Write a query to find the most recently released movie by each director and
 order the result by the release dates.
 
-If you need some hints try: {{% answer-expandable %}} To solve this, you'll need to
+If you need some hints try: {{% expandable %}} To solve this, you'll need to
 
 - work out how to query for all directors - what have directors done that make
   them directors?
@@ -23,9 +23,9 @@ If you need some hints try: {{% answer-expandable %}} To solve this, you'll need
 - for something extra, try using `since` to work out how many days since the
   movie was released (or how many days till release, for some)
 
-{{% /answer-expandable %}}
+{{% /expandable %}}
 
-Spoiler alert: {{% answer-expandable %}}
+Spoiler alert: {{% expandable %}}
 
 ```
 {
@@ -53,4 +53,4 @@ Spoiler alert: {{% answer-expandable %}}
 }
 ```
 
-{{% /answer-expandable %}}
+{{% /expandable %}}
