--- a/content/blocksvars/6.md
+++ b/content/blocksvars/6.md
@@ -22,7 +22,7 @@ have a small number of actors in common).
 As an optional challenge, for each of those actors list the movies they have
 made with either director.
 
-{{% answer-expandable %}}
+{{% expandable %}}
 
 ```
 {
@@ -54,4 +54,4 @@ made with either director.
 ```
 
 The syntax `uid(F_PJ, F_MS)` means the UIDs in either `F_PJ` or `F_MS` and is
-equivalent to `uid(F_PJ) OR uid(F_MS)`. {{% /answer-expandable %}}
+equivalent to `uid(F_PJ) OR uid(F_MS)`. {{% /expandable %}}
