--- a/content/graphqlschema/6.md
+++ b/content/graphqlschema/6.md
@@ -75,7 +75,8 @@ and Karl and set Alice's manager as Bob, but it did not link Bob, Frank, or Karl
 to the employer "Acme Corp." Update Acme Corp's employees to include Bob, Frank,
 and Karl.
 
-{{% answer-expandable %}} Update Acme Corp's employees: mutation { updateCompany(input:
+{{% expandable %}} Update Acme Corp's employees: mutation { updateCompany(input:
 { filter: { name: { eq: "Acme Corp." } } set: { employees: [ { xid: "bob" } {
 xid: "frank" } { xid: "karl" } ] } }) { numUids company { id name employees {
-xid name } } } } {{% /answer-expandable %}}
+xid name } } } } {{% /expandable %}}
+
