feat: add seed-basic-facets make target for facets lesson
- Add resources/facets.rdf with sample facet data
- Add seed-basic-facets target that explains and executes the mutation
- Rename load-* targets to seed-* for consistency
- Update content/basic/17.md to reference the new make target

--- a/content/basic/17.md
+++ b/content/basic/17.md
@@ -18,13 +18,29 @@ friendships.
 More details about facets are in the docs: https://docs.dgraph.io/dql/query/facets
 
 We first need to seed our dataset with facet information so the example query returns data.
-Copy and paste the command below into a terminal to run the mutation:
 
-### Seed the sample facet data
+### Seed sample facet data
 
-{{% expandable %}}
+In a terminal, navigate to the root directory where you checked out this tour and run:
+
 ```
-curl -sH "Content-Type: application/rdf" "localhost:8080/mutate?commitNow=true" -XPOST -d $'
+make seed-basic-facets
+```
+It will output the following:
+
+```
+=== Seeding Facet Sample Data ===
+
+This mutation adds sample data with facets (edge attributes)
+for the facets lesson of the tour;
+
+Facets allow you to store key-value pairs on edges, not just nodes.
+
+Request: POST http://localhost:8080/mutate?commitNow=true
+Content-Type: application/rdf
+
+Payload (resources/facets.rdf):
+─────────────────────────────────
 {
   set {
 
@@ -62,14 +78,19 @@ curl -sH "Content-Type: application/rdf" "localhost:8080/mutate?commitNow=true" 
     _:charlie <rated> _:movie1 (rating=2) .
     _:charlie <rated> _:movie2 (rating=5) .
     _:charlie <rated> _:movie3 (rating=1) .
+
   }
-}' | python -m json.tool
+}
+─────────────────────────────────
+
+
+Executing mutation...
+Facets sample data seeded successfully.
 ```
 
-{{% /expandable %}}
+### Run the sample query 
 
-After loading the data to see the facets on on scalar predicates in the response.
-
+Run the example query now to view the facets the mutation set on the edges of the "Alice" node. 
 
 ### Adding multiple attributes to a single node
 
@@ -84,15 +105,13 @@ _:MyNode <predicate2> <0x0f43> ( bar=bar, and=2 ) .
 _:MyNode <predicate3> <0x0f43> ( bar=bar, and=3 ) .
 ```
 
-More examples: {{% expandable %}}
+More examples:
 
 ```
 _:MyNode <Morning> <0x0f43> ( foo=true, and=1 , since=2006-02-02T13:01:09 ) .
 _:MyNode <Evening> <0x0f43> ( bar=false, and=2, since=2006-02-02T13:01:09 ) .
 _:MyNode <Night>   <0x22>   ( bar=true, and=3,  since=2006-02-02T13:01:09 ) .
 ```
-
-{{% /expandable %}}
 
 If you repeat the same predicate instead of distinct ones, each new line
 overwrites the previous edge attribute. Use distinct predicates to preserve
