docs: convert schema exercise query to curl command
Update the find UIDs query in the schema exercise to be a
copy-pasteable curl command that can be run directly in terminal.

--- a/content/schema/7.md
+++ b/content/schema/7.md
@@ -38,7 +38,7 @@ Don't worry if you can't find the `uid`s, you can always search by name:
 {{% expandable %}}
 
 ```
-{
+curl -sH "Content-Type: application/dql" "localhost:8080/query" -XPOST -d '{
   find_companyabc(func: eq(name, "CompanyABC")) {
     uid
   }
@@ -50,8 +50,7 @@ Don't worry if you can't find the `uid`s, you can always search by name:
   find_sarah(func: eq(name, "Sarah")) {
     uid
   }
-}
+}' | python3 -m json.tool
 ```
 
-The current editor is using the `/MUTATE` endpoint, so you may want to go back a
-few steps and run this on the `/QUERY` endpoint. {{% /expandable %}}
+{{% /expandable %}}
