docs: clarify delete mutation patterns and type system behavior
- Add S P O, S P *, S * * notation to delete patterns
- Document that S * * only deletes predicates defined in dgraph.type
- Link to DQL mutation docs for reference
- Remove TODO comment from example

--- a/content/schema/8.md
+++ b/content/schema/8.md
@@ -11,11 +11,17 @@ endpoint = "/mutate"
 
 There are three deletion options inside a delete mutation.
 
-- `<uid> <edge> <uid>/"value" .` Delete a single triple
-- `<uid> <edge> * .` Delete all triples for a given edge
-- `<uid> * * .` Delete all triples for a given node
+- `<uid> <edge> <uid>/"value" .` Delete a single triple (S P O)
+- `<uid> <edge> * .` Delete all values for a given predicate (S P *)
+- `<uid> * * .` Delete all predicates for a given node (S * *)
 
-The examples given here are not complete. Uids assigned on your instance would
+{{% notice note %}}
+The `S * *` pattern only deletes predicates that are defined in the node's
+`dgraph.type`. Untyped predicates remain untouched. See the
+[DQL Mutation docs](https://docs.dgraph.io/dql/dql-mutation/) for details.
+{{% /notice %}}
+
+The examples given here are not complete. UIDs assigned on your instance would
 be unique. Try something out; you're not going to hurt anyone, just delete their
 friends.
 
