docs: simplify movie dataset loading instructions
- Rename seed-movies-data to seed-movie-dataset
- Rename seed-intro-data to seed-intro-dataset
- Rename test-movies-dataset to test-movie-dataset
- Update moredata/1.md to use make seed-movie-dataset
- Add make command to blocksvars/1.md note

--- a/content/moredata/1.md
+++ b/content/moredata/1.md
@@ -9,43 +9,25 @@ courseName = "More Data"
 endpoint = "/alter"
 +++
 
-Ok, we are off to a start with Dgraph and DQL. Let’s move it up a few notches.
+Ok, we are off to a start with Dgraph and DQL. Let's move it up a few notches.
 
 Dgraph can also do query aggregation, geo-queries, string querying and more. But
 for all that let's move from the small datasets we started with and try out
 something bigger, much bigger.
 
-In our github repository you'll find a
-[dataset about movies, directors and actors](https://github.com/dgraph-io/tutorial/tree/master/resources/1million.rdf.gz).
+### Load the movie dataset
 
-Download it from that link and save into the `~/dgraph` directory or by running
-the following in a terminal
+In a terminal, navigate to the root directory where you checked out this tour and run:
 
 ```
-cd ~/dgraph
-wget "https://github.com/dgraph-io/tutorial/blob/master/resources/1million.rdf.gz?raw=true" -O 1million.rdf.gz -q
-
-OR (We have curl in Dgraph's containers)
-
-curl -L -o 1million.rdf.gz "https://github.com/dgraph-io/tutorial/blob/master/resources/1million.rdf.gz?raw=true"
-
+make seed-movie-dataset
 ```
 
-Run the schema mutation using the run button and then load the dataset into
-Dgraph from the terminal. You may be required to restart the Alpha with
-`--cache_mb 4096` in order to handle bigger dataset.
+This loads a dataset of about one million triples containing movies, directors,
+and actors into your local Dgraph instance. Dgraph reports back exactly how many
+triples were loaded and how long it took.
 
-```
-docker exec -it dgraph dgraph live -f 1million.rdf.gz --alpha localhost:9080 --zero localhost:5080 -c 1
-```
-
-There's around one million triples in the dataset. Dgraph reports back exactly
-how many triples were loaded and how long it took.
-
-<!--There are
-actors are described in the dataset.-->
-
-It's a big database of movies, but it won’t trouble Dgraph. It is, however, big
+It's a big database of movies, but it won't trouble Dgraph. It is, however, big
 enough for us to use more complex queries.
 
 This dataset is a one million triple subset of a
