--- a/content/blocksvars/1.md
+++ b/content/blocksvars/1.md
@@ -9,7 +9,8 @@ courseName = "Var Blocks"
 +++
 
 {{% notice "note" %}} From now on, to run the queries, you'll need to have
-loaded the [million triple movie dataset](../../moredata/1/). {{% /notice %}}
+loaded the million triple movie dataset. Run `make seed-movie-dataset` from the
+tour repository root to do so. {{% /notice %}}
 
 Queries can be issued as multiples.
 
