--- a/content/blocksvars/2.md
+++ b/content/blocksvars/2.md
@@ -25,6 +25,26 @@ Once defined, variables can be used in:
   definition)
 - in another query
 
+Here's an illustration of variable scoping:
+
+```
+{
+  A as some_query(...) {
+    B as some_edge @filter(...) { # can't use B or C in this filter
+      C as ... {
+        # A, B and C can be used here
+      }
+
+      # A, B and C can be used here
+    }
+
+    # A, B and C can be used in any blocks at this level
+  }
+
+  # A, B and C can be used in any other query block
+}
+```
+
 Variables don't affect the semantics of the query at the point they are defined.
 
 Query variables are used by `uid(<variable-name>)`. Variables evaluate to all
