docs: expand blocksvars lessons with explanations and examples
- Expand blocksvars/5.md to explain how query reorganizes results by genre
- Add joining queries example to blocksvars/6.md before the exercise

--- a/content/blocksvars/5.md
+++ b/content/blocksvars/5.md
@@ -8,4 +8,18 @@ course = 5
 courseName = "Var Blocks"
 +++
 
-Query variables used in other query blocks also allow to reorganize results.
+Query variables used in other query blocks also allow you to reorganize results.
+
+This query demonstrates reorganizing film data by genre:
+
+1. **First block** (`var`): Finds all films starring Taraji P. Henson and stores:
+   - `F` = all films she appeared in
+   - `G` = all genres of those films
+
+2. **Second block** (`Taraji_films_by_genre`): Reorganizes the results by starting
+   from genres (`uid(G)`) instead of the actor. For each genre, it uses the reverse
+   edge `~genre` to find films, then filters to only include Taraji's films (`uid(F)`).
+
+The result groups her filmography by genre (Drama, Comedy, Action, etc.) rather than
+listing films in a flat structure. This pattern is useful whenever you want to pivot
+or reorganize data around a different node type.
