--- a/content/blocksvars/6.md
+++ b/content/blocksvars/6.md
@@ -12,7 +12,46 @@ We've seen two common uses for variables: filtering and reorganizing results.
 Another is linking two queries to gain some new insight based on the joined
 results.
 
-Let's look at an example of joining two queries.
+### Example: Joining two queries
+
+Here's a simple example that finds actors who have appeared in both Comedy and
+Horror films:
+
+```
+{
+  # Store all actors from Comedy films
+  var(func: eq(name@en, "Comedy")) {
+    ~genre {
+      starring {
+        comedy_actors as performance.actor
+      }
+    }
+  }
+
+  # Store all actors from Horror films
+  var(func: eq(name@en, "Horror")) {
+    ~genre {
+      starring {
+        horror_actors as performance.actor
+      }
+    }
+  }
+
+  # Find actors in BOTH sets using @filter
+  actors_in_both_genres(func: uid(comedy_actors)) @filter(uid(horror_actors)) {
+    name@en
+  }
+}
+```
+
+The pattern is:
+1. **Query 1**: Collect UIDs into variable `A`
+2. **Query 2**: Collect UIDs into variable `B`
+3. **Query 3**: Start with `uid(A)` and filter by `uid(B)` to get the intersection
+
+### Exercise
+
+Now try it yourself:
 
 For two directors find the actors who have worked with both (not necessarily on
 the same movie). Many directors won't have actors in common, so start with some
