docs: rename variables in joining queries example to match tutorial style

--- a/content/blocksvars/6.md
+++ b/content/blocksvars/6.md
@@ -23,7 +23,7 @@ Horror films:
   var(func: eq(name@en, "Comedy")) {
     ~genre {
       starring {
-        comedy_actors as performance.actor
+        A_C as performance.actor
       }
     }
   }
@@ -32,22 +32,22 @@ Horror films:
   var(func: eq(name@en, "Horror")) {
     ~genre {
       starring {
-        horror_actors as performance.actor
+        A_H as performance.actor
       }
     }
   }
 
   # Find actors in BOTH sets using @filter
-  actors_in_both_genres(func: uid(comedy_actors)) @filter(uid(horror_actors)) {
+  actors_in_both_genres(func: uid(A_C)) @filter(uid(A_H)) {
     name@en
   }
 }
 ```
 
 The pattern is:
-1. **Query 1**: Collect UIDs into variable `A`
-2. **Query 2**: Collect UIDs into variable `B`
-3. **Query 3**: Start with `uid(A)` and filter by `uid(B)` to get the intersection
+1. **Query 1**: Collect UIDs into variable `A_C` (Actors in Comedy)
+2. **Query 2**: Collect UIDs into variable `A_H` (Actors in Horror)
+3. **Query 3**: Start with `uid(A_C)` and filter by `uid(A_H)` to get the intersection
 
 ### Exercise
 
