docs: improve trigram explanation with visual sliding window diagram

--- a/content/search/3.md
+++ b/content/search/3.md
@@ -9,9 +9,19 @@ courseName = "Search"
 +++
 
 Regular expressions require the `trigram` index. A trigram is a substring of 3
-consecutive characters, or runes.
+consecutive characters, or runes. To extract trigrams from a word, imagine
+sliding a 3-character window across the text, one character at a time:
 
-The trigrams of trigram are: tri, rig, igr, gra and ram.
+```
+trigram
+^^^        → tri
+ ^^^       → rig
+  ^^^      → igr
+   ^^^     → gra
+    ^^^    → ram
+```
+
+So the trigrams of "trigram" are: **tri**, **rig**, **igr**, **gra**, and **ram**.
 
 Valid regular expressions are able to be converted to a trigram query against
 the index. Dgraph searches the trigram index for possible matches and then runs
