--- a/content/intro/3.md
+++ b/content/intro/3.md
@@ -16,7 +16,7 @@ loaded successfully.
 Don't worry about the syntax for now, it will be explained later.
 
 You can load the same example data using JSON format. You're able to do that
-through our [clients](https://dgraph.io/docs/clients/), cURL or [Ratel UI](https://dgraph.io/docs/ratel/overview/).
+through our [clients](https://docs.dgraph.io/clients/), cURL or [Ratel UI](https://docs.dgraph.io/ratel/).
 
 See the JSON:
 
