feat: add lychee link checker and fix broken external links
- Add check-external-links target to Makefile with lychee (brew or docker)
- Add lychee.toml config to exclude internal/localhost links
- Update broken docs.dgraph.io links to new documentation structure
- Remove references to deprecated dgraph.io/learn
- Replace play.dgraph.io with localhost:8000 for local Ratel

--- a/content/basic/1.md
+++ b/content/basic/1.md
@@ -54,5 +54,5 @@ this, cut and paste them into the query panel, then edit and run them.
 
 The tutorial will handle the running of the query for you, so just focus on the
 query text. You can also learn about
-[posting queries](https://docs.dgraph.io/get-started/#step-3-run-queries) or
+[posting queries](https://docs.dgraph.io/dgraph-overview/) or
 [programming with Dgraph](https://docs.dgraph.io/clients/).
