--- a/content/graphqlintro/1.md
+++ b/content/graphqlintro/1.md
@@ -22,7 +22,6 @@ In this tutorial, you can run queries and mutations. The tutorial will guide you
 from your first graph query to creating more advanced queries.
 
 After completing this self-contained tutorial, please see the reference material
-available to help you use Dgraph in the [Dgraph Docs](https://docs.dgraph.io),
-and on [Dgraph Learn](https://dgraph.io/learn).
+available to help you use Dgraph in the [Dgraph Docs](https://docs.dgraph.io).
 
 When you are ready to begin, click the **Next** button.
