--- a/content/intro/5.md
+++ b/content/intro/5.md
@@ -16,7 +16,7 @@ got to do with databases?
 Graphs describe objects and the interconnections among them. Many people have
 heard of friendship graphs, or social network graphs, so let’s start there.
 
-We have loaded [Ratel UI](https://play.dgraph.io) in an iFrame for this lesson
+We have loaded [Ratel UI](http://localhost:8000) in an iFrame for this lesson
 and have ran the following query against your endpoint you provided in the
 earlier lesson.
 
