--- a/content/graphqlmoredata/3.md
+++ b/content/graphqlmoredata/3.md
@@ -16,14 +16,11 @@ basic queries and mutations on it.
 
 #### Where to go from here
 
-- Follow the
-  [Build a Message Board App in React](https://dgraph.io/learn/courses/messageboardapp/react/overview/introduction/)
-  course to put into application what you have learned.
 - You can find more in-depth details in Dgraph's
-  [GraphQL API Documentation](https://docs.dgraph.io/query-language/).
-- See [Deploy and Manage Documentation](https://docs.dgraph.io/deploy) to learn
+  [GraphQL API Documentation](https://docs.dgraph.io/graphql/).
+- See [Deploy and Manage Documentation](https://docs.dgraph.io/admin/) to learn
   how you can run Dgraph in your own environment.
-- Take [Dgraph's DQL Tour](https://dgraph.io/tour/intro/1/) to learn
+- Take [Dgraph's DQL Tour]({{< relref "intro/1" >}}) to learn
   Dgraph Query Language (DQL), which runs underneath the GraphQL API of Dgraph.
 
 ### Join the community
