--- a/content/search/8.md
+++ b/content/search/8.md
@@ -16,13 +16,13 @@ mutations on it.
 
 ### Where to go from here
 
-- Follow the [Tutorial](https://docs.dgraph.io/tutorials/) videos to reinforce
+- Follow the [Tutorial](https://docs.dgraph.io/learn/) videos to reinforce
   what you have learnt.
 - More queries can be found in the
-  [Query Language](https://docs.dgraph.io/query-language/) reference.
+  [Query Language](https://docs.dgraph.io/dql/) reference.
 - Go to [Clients](https://docs.dgraph.io/clients/) to see how to communicate
   with Dgraph from your application.
-- See [Deploy](https://docs.dgraph.io/deploy) if you wish to run Dgraph in a
+- See [Deploy](https://docs.dgraph.io/admin/) if you wish to run Dgraph in a
   cluster.
 
 ### Join the community
