--- a/content/intro/4.md
+++ b/content/intro/4.md
@@ -10,65 +10,55 @@ endpoint = "/mutate"
 +++
 
 In the last exercise, you added some data into Dgraph. Adding or removing data
-in Dgraph is called a mutation. We have two types of standard formats for
-mutations: RDF (Resource Description Framework) N-Quad and JSON (JavaScript
-Object Notation). RDF is a widely used standard in Graph or Ontology systems.
+in Dgraph is called a mutation. Dgraph supports two mutation formats: RDF
+(Resource Description Framework) N-Quad and JSON (JavaScript Object Notation).
 
-In Dgraph the mutation operations consist of two patterns: blank UID reference
-or explicit UID reference.
+Every node in Dgraph has a unique identifier called a **UID**, which Dgraph
+generates automatically when you create new data.
 
-This introduction is important for the coming exercises, many of the concepts
-presented here will be repeated in the next few chapters. (For example,
-[Adding Data - mutating data]({{< relref "schema/2" >}}) and
-[Exercise : Integrating existing data]({{< relref "schema/6" >}}).)
+## Blank UID (New Nodes)
 
-## Blank UID
-
-In a mutation, any definition that doesn't match the UID explicit reference
-format can be considered blank UID reference, also known as a blank node. The
-structure of a blank node consists of:
-
-underscore + a colon + unique name (identifier)
-
-For example, in the previous section you saw the blank nodes `_:michael` and
-`_:amit`. This is the proper blank node syntax. However, there will be cases
-where the parser will consider some typo as a blank node, but its use is not
-recommended. Examples below:
+When creating new nodes, use a **blank node** — a temporary identifier that
+Dgraph replaces with a real UID. The format is an underscore, colon, and a
+name:
 
 ```
-<_:uid43> or <_:uid4e030f>
-<someTypoMistake>
+<_:michael> <name> "Michael" .
 ```
 
-> Dgraph's [data export](https://docs.dgraph.io/deploy/#export-database) uses
-> blank nodes of the first form presented.
-
-In JSON, the blank node format is similar. The blank node is defined with the
-`"uid"` key of a JSON object:
+In JSON, use the `"uid"` key:
 
 ```
 {
-  "uid": "_:diggy",
-  "name": "diggy",
-  "dgraph.type": "Food",
-  "food": "pizza"
+  "uid": "_:michael",
+  "name": "Michael"
 }
 ```
 
-Blank nodes are covered in more detail in the
-[mutation docs](https://docs.dgraph.io/mutations/#blank-nodes-and-uid).
-
-{{% notice "note" %}} In Dgraph's Bulk loader any typo will be considered blank
-UID reference. Because Bulk loader is a tool for populate data from scratch.
-Different from Live Loader. {{% /notice %}}
-
-## Explicit UID
-
-To do a mutation for an existing node, you can refer to the node's UID directly
-in the mutation. The syntax is simple:
+When you execute a mutation with blank nodes, the response includes a `uids` map
+showing which UID was assigned to each blank node:
 
 ```
-<THE-UID> # or
+{
+  "data": {
+    "code": "Success",
+    "message": "Done",
+    "uids": {
+      "michael": "0x2957809"
+    }
+  }
+}
+```
+
+This maps the blank node identifiers (`_:alice`, `_:bob`) to the actual UIDs
+assigned by Dgraph (`0x1`, `0x2`). You can use these UIDs in subsequent queries
+and mutations.
+
+## Explicit UID (Existing Nodes)
+
+To update an existing node, reference its UID directly:
+
+```
 <0x4e030f> <somePredicate> "some new data" .
 ```
 
@@ -81,8 +71,7 @@ In JSON:
 }
 ```
 
-One way to know an existing node's UID is to simply query for the indexed
-predicate, e.g:
+To find a node's UID, query for it:
 
 ```
 {
@@ -91,7 +80,3 @@ predicate, e.g:
   }
 }
 ```
-
-{{% notice "note" %}} You should only reference existing UIDs. If you write a
-mutation with an unallocated UID, Dgraph will return an error. For new nodes,
-use blank nodes for Dgraph to allocate a new UID. {{% /notice %}}
