feat: add Docker-based tour container and link testing
- Add Dockerfile (Alpine-based) with Hugo for containerized tour
- Add docker-entrypoint.sh to wait for Dgraph and seed data
- Add tour service to docker-compose.yml with healthcheck
- Add .dockerignore to exclude unnecessary files
- Rename start to dev-start, add new start for Docker-based startup
- Add tour-ready target to wait for Hugo
- Add test-tour-links target to verify links in running tour
- Split lychee config: lychee-templates.toml and lychee-tour.toml
- Fix dgraph.io links to use docs.dgraph.io

--- a/content/graphqlintro/1.md
+++ b/content/graphqlintro/1.md
@@ -8,7 +8,7 @@ course = 1
 courseName = "Introduction"
 +++
 
-Welcome to GraphQL powered by [Dgraph](https://docs.dgraph.io) database.
+Welcome to GraphQL powered by [Dgraph](https://docs.dgraph.io/) database.
 
 This interactive tutorial will get you up and running writing queries in GraphQL
 using Dgraph, a high-performance graph database.
