--- a/content/intro/1.md
+++ b/content/intro/1.md
@@ -10,7 +10,7 @@ courseName = "Introduction"
 
 Hi,
 
-Welcome to [Dgraph](https://docs.dgraph.io).
+Welcome to [Dgraph](https://docs.dgraph.io/).
 
 <!---
 Dgraph is a distributed graph database, designed to scale from a single machine to data centers.
