feat: add tour-seed container for Windows/cross-platform seeding
- Add multi-stage Dockerfile with tour-hugo and tour-seed targets
- tour-seed includes dgraph CLI for running seed commands
- Add Alpine Linux (apk) support to deps-start and deps-dev
- Handle running as root in containers (no sudo needed)
- Make docker-up, docker-down, reset no-op when inside container
- seed-movie-dataset uses dgraph live directly when in container
- Add Windows instructions using docker exec in tour docs

--- a/content/basic/17.md
+++ b/content/basic/17.md
@@ -26,6 +26,12 @@ In a terminal, navigate to the root directory where you checked out this tour an
 ```
 make seed-basic-facets
 ```
+
+On Windows (or if you don't have `make` installed), use Docker instead:
+
+```
+docker exec tour-seed make seed-basic-facets
+```
 It will output the following:
 
 ```
