--- a/content/blocksvars/1.md
+++ b/content/blocksvars/1.md
@@ -10,7 +10,8 @@ courseName = "Var Blocks"
 
 {{% notice "note" %}} From now on, to run the queries, you'll need to have
 loaded the million triple movie dataset. Run `make seed-movie-dataset` from the
-tour repository root to do so. {{% /notice %}}
+tour repository root to do so. On Windows (or if you don't have `make` installed),
+use `docker exec tour-seed make seed-movie-dataset` instead. {{% /notice %}}
 
 Queries can be issued as multiples.
 
