--- a/content/moredata/1.md
+++ b/content/moredata/1.md
@@ -23,6 +23,12 @@ In a terminal, navigate to the root directory where you checked out this tour an
 make seed-movie-dataset
 ```
 
+On Windows (or if you don't have `make` installed), use Docker instead:
+
+```
+docker exec tour-seed make seed-movie-dataset
+```
+
 This loads a dataset of about one million triples containing movies, directors,
 and actors into your local Dgraph instance. Dgraph reports back exactly how many
 triples were loaded and how long it took.
